# namachan10777.dev

./: .assetignore  .earthlyignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .prettierrc.js  .prettierrc.mjs  .stylelintrc.json  404.saty  Caddyfile  Cargo.toml  Dockerfile  Earthfile  Makefile  PLAN_COMMENT_FEATURE.md  README.md  Untitled  aboutme.md  assetsignore.ts  astro.config.mjs  astro.config.ts  bun.lockb  content-collections.ts  contentrain.json  elm.js  elm.json  env.d.ts  eslint.config.js  eslint.config.mjs  eslint.config.ts  global.d.ts  gulpfile.js  index.css  index.html  index.js  index.saty  index.xhtml  jsblog.satyh-html  (+27 more)
.circleci/: config.yml
.github/workflows/: check.yml  ci.yaml  ci.yml  deploy-content.yaml  deploy.yml  html-deploy.yml  node.js.yml  test.yml
.zed/: settings.json
adapters/cloudflare-pages/: vite.config.ts
adapters/static/: vite.config.ts
articles/: blog-with-satysfi.saty  change-docker-data-root.saty  hello.saty  index.md  nextjs-blog.md  small-class.satyh-html  small-class.satyh-xhtml
articles/blog/: blog-on-nextjs.md  blog-on-rust.md  build-rust-for-raspberrypi-by-earthly.md  cigarettes.md  new-home-network-2021.md
articles/diary/: 2021-09-14.md  2021-09-21.md  2021-11-04.md
articles/public/: keybase.txt  pubkey.txt
articles/style/: index.css
assets/: keybase.txt
cfcms/: Cargo.toml  ast.json
cfcms/src/: lib.rs  main.rs
components/: footer.tsx  header.tsx  md.tsx  normalLink.tsx
content/: README.md  compile.ts  config.toml  config.yaml  package.json  preview.yaml
content/pub/: asj-2020-3.yml  ipjs-hpc-2023-12.yml
content/src/: rehype-partial.ts
contentrain/models/: metadata.json  post.json
engine/: .gitignore  Cargo.toml
engine/example/: blog-with-satysfi.md  change-docker-data-root.md  config.json  index.md  index.saty  index.tml  test.saty
engine/src/: analysis.rs  ast2xml.rs  backend.rs  codegen.rs  convert.rs  frontend.rs  grammar.pest  lib.rs  main.rs  parser.rs  xml.rs
engine/src/paths/: mod.rs  resolve_link.rs
engine/vim/ftdetect/: tml.vim
engine/vim/ftplugin/: tml.vim
engine/vim/syntax/: kibanate.vim  tml.vim
examples/: cli.rs
frontend/: assetsignore.ts  vite.config.ts
frontend/public/: _redirects  manifest.json
lib/: articles.ts  parser.ts
migrations/: 0001_init.sql  0001_init_database.sql  0002_comment_good.sql
namecard/: namecard.html
nextjs/namachan10777.dev/: package-lock.json  package.json
openpgp/: build.ts  package.json  wrangler.toml
openpgp/keys/: admin.asc
pages/: _app.tsx  blog.tsx  diary.tsx  index.tsx  syntaxhighlight.css
pages/api/: hello.ts  ogp.ts
pages/blog/: [name].tsx
pages/diary/: [name].tsx
public/: blog-architecture.md  blog-architecture.tml  change-docker-data-root.md  change-docker-data-root.tml  config.json  email-reminder.md  email-reminder.tml  fix-coc-diagnostics-highlight.md  fix-coc-diagnostics-highlight.tml  global.css  globals.css  id.pub  id_25519.pub  id_ed25519.pub  id_rsa.pub  index.css  index.md  index.tml
public/articles/: blog-architecture.tml  change-docker-data-root.tml  email-reminder.tml  fix-coc-diagnostics-highlight.tml  host-misskey.tml  nvim-config-lisp.tml  twitter-card-memo.tml
public/diaries/: 2020-10-25.tml  2020-10-26.tml  2020-10-27.tml  2020-10-28.tml  2020-10-30.tml  2020-10-31.tml  2020-11-1.tml  2020-11-29.tml  2020-11-4.tml  2020-11-5.tml  2020-11-6.tml  2020-11-8.tml  2020-12-21.tml  2020-12-24.tml  2021-1-11.tml  2021-1-16.tml  2021-2-12.tml  2021-2-13.tml  2021-2-23.tml  2021-3-20.tml  2021-5-20.tml
resume/: resume.html
scripts/: package.json  pnpm-lock.yaml  tsconfig.json
scripts/src/: code-repo.d.mts  index.mts  index.ts
specials/: _redirects
src/: Fs.elm  Main.elm  Os.elm  Path.elm  Storage.elm  Types.elm  Util.elm  content.config.ts  entry.cloudflare-pages.tsx  entry.preview.tsx  entry.server.tsx  entry.ssr.tsx  env.d.ts  global.css  index.d.ts  main.rs  reset.css.ts  root.tsx  routes.ts
src/client/: dom.ts  pagefind.ts
src/components/: Anchor.astro  Blockquote.astro  Bold.astro  Code.astro  CodeBlock.astro  ContentPlacement.astro  EducationEntry.astro  Footer.astro  Header.astro  HorizontalRule.astro  Img.astro  MarkdownContent.astro  OgImage.tsx  PaginationNavigation.astro  Paragraph.astro  PostList.astro  PostPreview.astro  Publication.astro  SearchButton.astro  SearchDialog.astro  Section.astro  Strong.astro  Table.astro  Tag.astro  Tags.astro  Typography.astro  WorkEntry.astro  code-block.module.css  code-block.tsx  education.tsx  events.astro  footer.astro  good-button.module.css  good-button.tsx  hamburger.tsx  header.astro  heading.tsx  link-card.module.css  link-card.tsx  not-found.tsx  (+15 more)
src/content/: config.ts
src/layouts/: Base.astro  BlogPost.astro  base.astro  global.css  globals.css  head.astro  katex.css  layer.css.ts  markdown.css  reset.css  reset.css.ts  uchu.css
src/lib/: cloudflare.ts  collection-helper.ts  comments.ts  contents.ts  context.ts  format.ts  global-topic.ts  google-font-download.ts  hooks.ts  og-meta-tags.ts  og.tsx  pagefind.ts  post-head.ts  post.ts  posts.ts  qwik.ts  schema.ts  search-dialog.ts  server-log.ts  theme.ts  turnstile.ts  (+1 more)
styles/: index.css
tests/: FsTests.elm  StorageTest.elm  loader.test.ts
tml/: change-docker-data-root.tml  index.tml
unmark/: Cargo.toml  config.ron  index.md  package.json
unmark/examples/: app.rs
unmark/parser_example/: hello_world.md
unmark/src/: builder.rs  dev_server.rs  dom.rs  highlight.rs  html.rs  htmlgen.rs  lib.rs  main.rs  md.rs  parser.rs  util.rs
unmark/src/html/: git.rs  mod.rs
unmark/src/md/: mod.rs
unmark/src/parser/: custom_component.rs  frontmatter.rs  markdown.rs  mod.rs
unmark/src/tools/: git.rs  mod.rs
unmark/src/transpiler/: helper.rs  mod.rs
unmark/src/webtools/: git.rs  image.rs  mod.rs
unmark/tests/: foo.rs  full.md  highlight.md  md.rs
unmark/tests/md/: list.md
web/: .gitignore  astro.config.ts  eslint.config.mjs
webpack-md-loader/: lib.ts  loader.ts  tsconfig.json
webpack-tml-loader/: lib.ts  loader.ts
workers/: app.ts
(+406 files in other folders)
