[package]
name = "namachan10777-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axohtml = "0.5.0"
clap = { version = "4.3.0", features = ["derive"] }
maplit = "1.0.2"
mime = "0.3.17"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
unmark = {path="./unmark"}
