[package]
name = "namachan10777-dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axohtml = "0.5.0"
clap = { version = "4.3.0", features = ["derive"] }
image = {version="0.24.6", features = ["webp-encoder"]}
maplit = "1.0.2"
mime = "0.3.17"
notify = "6.0.0"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
svg = "0.13.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unmark = {path="./unmark"}
