[package]
name = "cfcms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axohtml = "0.5.0"
clap = { version = "4.5.41", features = ["derive"] }
glob = "0.3.2"
katex = "0.4.6"
maplit = "1.0.2"
minify-html = "0.16.4"
pulldown-cmark = "0.13.0"
thiserror = "2.0.12"
tracing = { version = "0.1.41", features = ["valuable"] }
