[package]
name = "cfcms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
katex = "0.4"
maplit = "1"
minify-html = "0.16"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = { version = "0.1.41", features = ["valuable"] }
