[package]
name = "cfcms"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = "1.8.2"
aws-sdk-s3 = "1.98.0"
clap = { version = "4.5", features = ["derive"] }
cloudflare = "0.14.0"
glob = "0.3"
katex = "0.4"
maplit = "1"
minify-html = "0.16"
pathdiff = "0.2.3"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "fs"] }
toml = "0.9.2"
tracing = { version = "0.1.41", features = ["valuable"] }
