[package]
name = "engine"
version = "0.1.0"
authors = ["Nakano Masaki <namachan10777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
pest_derive = "2.1.0"
pest = "2.1.3"
serde_derive = "1.0.111"
serde = "1.0.111"
serde_json = "1.0.53"
zip = "0.5.5"
regex = "1.3.9"
syntect = "4.2.0"
chrono = "0.4.11"
