[package]
name = "unmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["dev-server"]
dev-server= ["axum"]
syntax-highlight=["syntect"]

[dependencies]
anyhow = {version="1.0.68", features=["backtrace"]}
async-recursion = "1.0.4"
async-trait = "0.1.68"
axohtml = "0.5.0"
axum = { version = "0.6.17", default-features=false, features = ["headers", "http1", "http2", "tokio"], optional=true }
chumsky = "0.9.2"
clap = { version = "4.0.32", features = ["derive"] }
comrak = { version = "0.18.0", features = [], default-features = false }
futures = {version="0.3.28", features=["std", "async-await"], default-features=false}
hyper = "0.14.26"
image = {version="0.24.6", features = ["jpeg", "gif", "ico", "png", "tga", "tiff", "webp", "webp-encoder"], default-features=false}
itertools = "0.10.5"
maplit = "1.0.2"
mime = "0.3.17"
mime_guess = "2.0.4"
nom = "7.1.3"
notify = "5.1.0"
once_cell = "1.17.1"
regex = "1.8.1"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
sha2 = "0.10.6"
syntect = { version = "5.0.0", optional = true, default-features = false, features = ["default-syntaxes", "parsing"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["net", "rt-multi-thread", "macros", "fs", "signal", "tracing", "io-util", "sync"] }
toml = "0.5.10"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
typenum = "1.16.0"
uri = "0.4.0"
url = "2.3.1"
uuid = { version = "1.3.2", features = ["v4"] }
