[package]
name = "unmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
syntax = ["tree-sitter", "tree-sitter-highlight", "tree-sitter-rust", "tree-sitter-javascript"]
default = ["syntax"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
axohtml = "0.5.0"
comrak = {version="0.18.0", default-features=false, features=[]}
maplit = "1.0.2"
mime = "0.3.17"
mime_guess = "2.0.4"
once_cell = "1.17.1"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.40"
toml = "0.7.3"
tree-sitter = { version = "0.20.10", optional = true }
tree-sitter-highlight = { version="0.20.1", optional=true }
tree-sitter-javascript = { version="0.20.0", optional=true }
tree-sitter-rust = { version="0.20.3", optional=true }
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
serde_json = "1.0.96"
