[package]
name = "unmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
syntax = ["tree-sitter", "tree-sitter-highlight", "tree-sitter-rust", "tree-sitter-javascript"]
default = ["syntax"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
axohtml = {git="https://github.com/namachan10777/axohtml", rev="7aaf4beb6480404e8ae8850228246e2cef225d55"}
axum = { version = "0.6.18", features = ["headers"] }
comrak = {version="0.18.0", default-features=false, features=[]}
generic-array = "0.14.7"
hyper = "0.14.26"
maplit = "1.0.2"
mime = "0.3.17"
mime_guess = "2.0.4"
notify = "6.0.0"
once_cell = "1.17.1"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["signal", "fs"] }
toml = "0.7.3"
tracing = "0.1.37"
tree-sitter = { version = "0.20.10", optional = true }
tree-sitter-highlight = { version="0.20.1", optional=true }
tree-sitter-javascript = { version="0.20.0", optional=true }
tree-sitter-rust = { version="0.20.3", optional=true }
url = "2.3.1"

[dev-dependencies]
anyhow = "1.0.71"
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
image = { version = "0.24.6", features = ["webp-encoder"] }
serde_json = "1.0.96"
svg = "0.13.1"
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
